--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -21,7 +21,7 @@
 <ion-content padding>
   <ion-list>
     <!-- Repeat the ion-item for as many items that we have inside of our shopping list. -->
-    <ion-item *ngFor="let item of shoppingListRef$ | async">
+    <ion-item *ngFor="let item of shoppingListRef$ | async" (click)="selectShoppingItem(item)">
       <h2>Item Name: {{item.itemName}}</h2>
       <h3>Amount: {{item.itemNumber}}</h3>
     </ion-item>
